--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "learning perpose",
   "main": "app.js",
   "scripts": {
-    "start:dev":"nodemon app.js",
-    "start":"node app.js",
+    "start:dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
