--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,6 +34,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Deploy to Production
-      run: |
-        npm install
-        npm start
+      - name: Deploy to Production
+        run: |
+          docker build -t your-docker-registry/your-image-name:latest .
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push your-docker-registry/your-image-name:latest
