--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,41 +1,37 @@
-name: CI/CD Pipeline
+name: CI/CD
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      docker:
+        image: docker:20.10.9-dind
+        ports:
+          - 2375:2375
+        options: --privileged
+
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 14
-
-    - name: Install Dependencies
-      run: npm install
-
-    - name: Build and Test
-      run: npm run build
+      - name: Build and test
+        run: |
+          docker-compose build
+          docker-compose run your_application_name npm test
 
   deploy:
     runs-on: ubuntu-latest
 
-    needs: build
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Deploy to Production
-      - name: Deploy to Production
+      - name: Deploy
         run: |
-          docker build -t your-docker-registry/your-image-name:latest .
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker push your-docker-registry/your-image-name:latest
+          docker-compose up -d node_application
